; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/test/esp32/extr_test_rmt.c_rx_init.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/test/esp32/extr_test_rmt.c_rx_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32 }
%struct.TYPE_5__ = type { i32, i32, %struct.TYPE_4__, i32, i32, i32 }

@RMT_ITEM32_TIMEOUT_US = common dso_local global i32 0, align 4
@RMT_TICK_10_US = common dso_local global i32 0, align 4
@RMT_RX_CHANNEL = common dso_local global i32 0, align 4
@RMT_MODE_RX = common dso_local global i32 0, align 4
@RMT_CLK_DIV = common dso_local global i32 0, align 4
@RMT_RX_GPIO_NUM = common dso_local global i32 0, align 4
@DATA_ITEM_NUM = common dso_local global i32 0, align 4
@RMT_TX_DATA_NUM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @rx_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rx_init() #0 {
  %1 = alloca %struct.TYPE_4__, align 4
  %2 = alloca %struct.TYPE_5__, align 4
  %3 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 0
  store i32 1, i32* %3, align 4
  %4 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 1
  store i32 100, i32* %4, align 4
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 2
  %6 = load i32, i32* @RMT_ITEM32_TIMEOUT_US, align 4
  %7 = sdiv i32 %6, 10
  %8 = load i32, i32* @RMT_TICK_10_US, align 4
  %9 = mul nsw i32 %7, %8
  store i32 %9, i32* %5, align 4
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %2, i32 0, i32 0
  store i32 1, i32* %10, align 4
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %2, i32 0, i32 1
  %12 = load i32, i32* @RMT_RX_CHANNEL, align 4
  store i32 %12, i32* %11, align 4
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %2, i32 0, i32 2
  %14 = bitcast %struct.TYPE_4__* %13 to i8*
  %15 = bitcast %struct.TYPE_4__* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %14, i8* align 4 %15, i64 12, i1 false)
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %2, i32 0, i32 3
  %17 = load i32, i32* @RMT_MODE_RX, align 4
  store i32 %17, i32* %16, align 4
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %2, i32 0, i32 4
  %19 = load i32, i32* @RMT_CLK_DIV, align 4
  store i32 %19, i32* %18, align 4
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %2, i32 0, i32 5
  %21 = load i32, i32* @RMT_RX_GPIO_NUM, align 4
  store i32 %21, i32* %20, align 4
  %22 = call i32 @rmt_config(%struct.TYPE_5__* %2)
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %2, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* @DATA_ITEM_NUM, align 4
  %26 = sext i32 %25 to i64
  %27 = mul i64 4, %26
  %28 = load i32, i32* @RMT_TX_DATA_NUM, align 4
  %29 = add nsw i32 %28, 6
  %30 = sext i32 %29 to i64
  %31 = mul i64 %27, %30
  %32 = trunc i64 %31 to i32
  %33 = call i32 @rmt_driver_install(i32 %24, i32 %32, i32 0)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @rmt_config(%struct.TYPE_5__*) #2

declare dso_local i32 @rmt_driver_install(i32, i32, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
